kubernetes/examples/pod-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-probe
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /hello
          port: 80
        initialDelaySeconds: 5
        failureThreshold: 3
        successThreshold: 1
        periodSeconds: 10
        timeoutSeconds: 10
