kubernetes/examples/pod-with-annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-anotations-name
  labels:
    version: 1.4.5
    environment: production
  annotations:
    description: we can create whatever here
spec:
  containers:
    - name: container-name
      image: nginx
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
        requests:
          memory: "64Mi"
          cpu: "250m"
