kubernetes/examples/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  labels:
    app: nginx-rs
    env: prod
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
