kubernetes/examples/service-nginx-load-balancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-nginx-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: service-nginx-load-balancer
  ports:
  - port: 8080
    targetPort: 80
