kubernetes/examples/service-nginx-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-nginx-nodeport
spec:
  type: NodePort
  selector:
    name: service-nodeport
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30001
