kubernetes/examples/service-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  selector:
    name: nginx-service-app
  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl-nginx
spec:
  containers:
    - name: curl-nginx
      image: khannedy/nginx-curl
